Bug 441660 - Kalarm crashes if launched while already running
Summary: Kalarm crashes if launched while already running
Status: RESOLVED FIXED
Alias: None
Product: kalarm
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.3.0
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: David Jarvie
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-28 15:41 UTC by Kishore Gopalakrishnan
Modified: 2021-08-29 22:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2021-08-28 15:41:16 UTC
Application: kalarm (3.3.0 (KDE Apps 21.11.40))

Qt Version: 5.15.3
Frameworks Version: 5.86.0
Operating System: Linux 5.11.0-27-generic x86_64
Windowing System: X11
Distribution: KDE neon Unstable Edition
DrKonqi: 5.22.80 [CoredumpBackend]

-- Information about the crash:
- What I was doing when the application crashed:
1. Make sure kalarm is open and the kalarm window is shown
2. Launch kalarm again from krunner

The crash can be reproduced every time.

-- Backtrace:
Application: KAlarm (kalarm), signal: Segmentation fault

[New LWP 2037]
[New LWP 2038]
[New LWP 2041]
[New LWP 2039]
[New LWP 2043]
[New LWP 2044]
[New LWP 2040]
[New LWP 2042]
[New LWP 2045]
[New LWP 2046]
[New LWP 2047]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
Core was generated by `/usr/bin/kalarm'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0  __GI_raise (sig=<optimized out>) at ../sysdeps/unix/sysv/linux/raise.c:50
[Current thread is 1 (Thread 0x7f13a783f9c0 (LWP 2037))]
__preamble__
[Current thread is 1 (Thread 0x7f13a783f9c0 (LWP 2037))]

Thread 11 (Thread 0x7f1391046700 (LWP 2047)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5597739e4f48) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x5597739e4ef8, cond=0x5597739e4f20) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x5597739e4f20, mutex=0x5597739e4ef8) at pthread_cond_wait.c:638
#3  0x00007f139e58be7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#4  0x00007f139e58ba7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#5  0x00007f13ab948609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f13acc45293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 10 (Thread 0x7f1391847700 (LWP 2046)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5597739e4f48) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x5597739e4ef8, cond=0x5597739e4f20) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x5597739e4f20, mutex=0x5597739e4ef8) at pthread_cond_wait.c:638
#3  0x00007f139e58be7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#4  0x00007f139e58ba7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#5  0x00007f13ab948609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f13acc45293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 9 (Thread 0x7f1392048700 (LWP 2045)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5597739e4f48) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x5597739e4ef8, cond=0x5597739e4f20) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x5597739e4f20, mutex=0x5597739e4ef8) at pthread_cond_wait.c:638
#3  0x00007f139e58be7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#4  0x00007f139e58ba7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#5  0x00007f13ab948609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f13acc45293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 8 (Thread 0x7f139d330700 (LWP 2042)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x559773c3dc20) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x559773c3dbd0, cond=0x559773c3dbf8) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x559773c3dbf8, mutex=0x559773c3dbd0) at pthread_cond_wait.c:638
#3  0x00007f139ec4374b in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#4  0x00007f139ec436cb in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#5  0x00007f13ab948609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f13acc45293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 7 (Thread 0x7f139e332700 (LWP 2040)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x559773c3c338) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x559773c3c2e8, cond=0x559773c3c310) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x559773c3c310, mutex=0x559773c3c2e8) at pthread_cond_wait.c:638
#3  0x00007f139ec46523 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#4  0x00007f139ec4638b in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#5  0x00007f13ab948609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f13acc45293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 6 (Thread 0x7f1392849700 (LWP 2044)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5597739e4f48) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x5597739e4ef8, cond=0x5597739e4f20) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x5597739e4f20, mutex=0x5597739e4ef8) at pthread_cond_wait.c:638
#3  0x00007f139e58be7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#4  0x00007f139e58ba7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#5  0x00007f13ab948609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f13acc45293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 5 (Thread 0x7f139cb2f700 (LWP 2043)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x559773c3dc20) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x559773c3dbd0, cond=0x559773c3dbf8) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x559773c3dbf8, mutex=0x559773c3dbd0) at pthread_cond_wait.c:638
#3  0x00007f139ec4374b in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#4  0x00007f139ec436cb in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#5  0x00007f13ab948609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f13acc45293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7f13a5e48700 (LWP 2039)):
#0  0x00007f13acc38aff in __GI___poll (fds=0x7f1398013fa0, nfds=4, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f13aaee936e in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f13aaee94a3 in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f13ad222fc2 in QEventDispatcherGlib::processEvents (this=0x7f1398000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#4  0x00007f13ad1c726b in QEventLoop::exec (this=this@entry=0x7f13a5e47bb0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#5  0x00007f13acfe0c22 in QThread::exec (this=this@entry=0x7f13ade67d80 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#6  0x00007f13adde3f4b in QDBusConnectionManager::run (this=0x7f13ade67d80 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:179
#7  0x00007f13acfe1dbc in QThreadPrivate::start (arg=0x7f13ade67d80 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:329
#8  0x00007f13ab948609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#9  0x00007f13acc45293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7f139db31700 (LWP 2041)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x559773c3c498) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x559773c3c448, cond=0x559773c3c470) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x559773c3c470, mutex=0x559773c3c448) at pthread_cond_wait.c:638
#3  0x00007f139ec46523 in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#4  0x00007f139ec4638b in ?? () from /usr/lib/x86_64-linux-gnu/dri/swrast_dri.so
#5  0x00007f13ab948609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f13acc45293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f13a6a49700 (LWP 2038)):
#0  0x00007f13acc38aff in __GI___poll (fds=0x7f13a6a48ae8, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f13abaf4c1a in ?? () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f13abaf690a in xcb_wait_for_event () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f13a7192e88 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#4  0x00007f13acfe1dbc in QThreadPrivate::start (arg=0x559773844540) at thread/qthread_unix.cpp:329
#5  0x00007f13ab948609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f13acc45293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f13a783f9c0 (LWP 2037)):
[KCrash Handler]
#3  ResourceView::ResourceView (this=0x559773cfbb50, model=0x0, parent=<optimized out>) at ./src/resources/resourcemodel.cpp:617
#4  0x000055977282f045 in ResourceSelector::ResourceSelector (this=<optimized out>, parentWindow=<optimized out>, parent=<optimized out>) at ./src/resourceselector.cpp:66
#5  0x00005597727a5320 in MainWindow::MainWindow (this=0x559773cc68e0, restored=<optimized out>, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at ./src/mainwindow.cpp:150
#6  0x00005597727a5bf3 in MainWindow::create (restored=restored@entry=false) at ./src/mainwindow.cpp:118
#7  0x000055977279533f in KAlarmApp::activateInstance (this=0x55977383e410, args=..., workingDirectory=..., outputText=0x0) at ./src/kalarmapp.cpp:667
#8  0x00007f13ad1ff78e in QtPrivate::QSlotObjectBase::call (a=0x7fffa3353740, r=0x55977383e410, this=0x55977391a420) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#9  doActivate<false> (sender=0x7fffa3354190, signal_index=3, argv=0x7fffa3353740) at kernel/qobject.cpp:3886
#10 0x00007f13ad1f8b57 in QMetaObject::activate (sender=sender@entry=0x7fffa3354190, m=m@entry=0x7f13ae9a97c0 <KDBusService::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7fffa3353740) at kernel/qobject.cpp:3946
#11 0x00007f13ae9988bb in KDBusService::activateRequested (this=this@entry=0x7fffa3354190, _t1=..., _t2=...) at ./obj-x86_64-linux-gnu/src/KF5DBusAddons_autogen/EWIEGA46WW/moc_kdbusservice.cpp:204
#12 0x00007f13ae99c088 in KDBusService::Activate (this=0x7fffa3354190, platform_data=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qlist.h:160
#13 0x00007f13ae9a3dc3 in KDBusServiceAdaptor::qt_metacall (this=0x559773920860, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fffa33538f0) at ./obj-x86_64-linux-gnu/src/kdbusservice_adaptor.moc:145
#14 0x00007f13addf055b in QDBusConnectionPrivate::deliverCall (this=<optimized out>, object=<optimized out>, msg=..., metaTypes=..., slotIdx=<optimized out>) at qdbusintegrator.cpp:1001
#15 0x00007f13addf59e7 in QDBusConnectionPrivate::activateCall (this=this@entry=0x7f1398003a00, object=0x559773920860, flags=flags@entry=273, msg=...) at qdbusintegrator.cpp:904
#16 0x00007f13addf628e in QDBusConnectionPrivate::activateCall (msg=..., flags=273, object=<optimized out>, this=0x7f1398003a00) at qdbusintegrator.cpp:853
#17 QDBusConnectionPrivate::activateObject (pathStartPos=<optimized out>, msg=..., node=..., this=0x7f1398003a00) at qdbusintegrator.cpp:1497
#18 QDBusConnectionPrivate::activateObject (this=0x7f1398003a00, node=..., msg=..., pathStartPos=<optimized out>) at qdbusintegrator.cpp:1447
#19 0x00007f13addf901c in QDBusActivateObjectEvent::placeMetaCall (this=0x55977383fb80) at qdbusintegrator.cpp:1617
#20 0x00007f13ad1f6309 in QObject::event (this=0x7fffa3354190, e=0x55977383fb80) at kernel/qobject.cpp:1314
#21 0x00007f13adffadc3 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x7fffa3354190, e=0x55977383fb80) at kernel/qapplication.cpp:3632
#22 0x00007f13ae003bb8 in QApplication::notify(QObject*, QEvent*) () at kernel/qapplication.cpp:3156
#23 0x00007f13ad1c876a in QCoreApplication::notifyInternal2 (receiver=0x7fffa3354190, event=0x55977383fb80) at ../../include/QtCore/5.15.3/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:325
#24 0x00007f13ad1cb071 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x559773836f60) at kernel/qcoreapplication.cpp:1821
#25 0x00007f13ad223967 in postEventSourceDispatch (s=0x5597738fec40) at kernel/qeventdispatcher_glib.cpp:277
#26 0x00007f13aaee917d in g_main_context_dispatch () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f13aaee9400 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#28 0x00007f13aaee94a3 in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007f13ad222fc2 in QEventDispatcherGlib::processEvents (this=0x5597738f8de0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#30 0x00007f13ad1c726b in QEventLoop::exec (this=this@entry=0x7fffa3354070, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#31 0x00007f13ad1cf424 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#32 0x00005597726d137f in main (argc=<optimized out>, argv=<optimized out>) at ./src/main.cpp:70

Possible duplicates by query: bug 331719, bug 273634.

Report to https://bugs.kde.org/
Comment 1 David Jarvie 2021-08-29 22:53:08 UTC
Git commit ac7402f51c1079d03ac2256fd152ec7740e2eddf by David Jarvie.
Committed on 29/08/2021 at 22:52.
Pushed by djarvie into branch 'release/21.08'.

Bug 441660: Fix crash when KAlarm is launched while already running

M  +1    -1    CMakeLists.txt
M  +3    -0    Changelog
M  +7    -8    src/resources/resourcemodel.cpp
M  +11   -12   src/resources/resourcemodel.h

https://invent.kde.org/pim/kalarm/commit/ac7402f51c1079d03ac2256fd152ec7740e2eddf