Bug 441660: Fix crash when KAlarm is launched while already running

BUG:441660